# staq

./: .err  .gitignore  .gitmodules  .out2  .travis.yml  ;  CHANGES  CHANGES.md  CMakeLists.txt  Dockerfile  Doxyfile  INSTALL.md  LICENSE  LICENSE.txt  README.md  VERSION  appveyor.yml  doxyfile  junk  pyproject.toml  s3_table_file.csv  setup.py
.appveyor/: appveyor_build.bat  appveyor_test.bat
.circleci/: config.yml
.github/workflows/: cmake.yml
cmake/: FindGMP.cmake  grid_synth.cmake  pystaq.cmake  staqConfig.cmake.in  staq_grid_synth.cmake  staq_msvc.cmake  staq_msvc.cmake.in  staq_msvc_pthread.cmake  staq_pystaq.cmake  staq_uninstall.cmake.in  staq_unit_tests.cmake  staq_windows.cmake
demos/: add_3_5.qasm  adder_4.v  run_qiskit.py  run_synthewareq.sh
demos/benchmarks/: adder_8.qasm  barenco_tof_3.qasm  barenco_tof_4.qasm  csla_mux_3.qasm  cycle_17_3.qasm  gf2^10_mult.qasm  gf2^128_mult.qasm  gf2^32_mult.qasm  gf2^8_mult.qasm  gf2^9_mult.qasm  grover_5.qasm  ham15-low.qasm  hwb11.qasm  hwb6.qasm  mod_adder_1024.qasm  mod_adder_1048576.qasm  mod_mult_55.qasm  qcla_adder_10.qasm  qcla_mod_7.qasm  rc_adder_6.qasm  tof_4.qasm  tof_5.qasm
docker/: Dockerfile  README.md
examples/: CMakeLists.txt  Makefile  example_usage.cmake  inline_test.qasm  ionq_test.qasm  logic.qasm  mapping_test.qasm  oracle_expander.cpp  qasm_elaboration.cpp  rz_test.qasm  rz_test1.qasm  rz_test2.qasm  rz_test3.qasm  rz_test4.qasm  test.cpp  test.qasm  toffoli_4.v
examples/standalone/: CMakeLists.txt
examples/standalone/src/: main.cpp
examples/staq_paper/: add_3_5_synthesized.qasm  run_staq.sh
examples/staq_paper/benchmarks/: barenco_tof_5.qasm  csum_mux_9.qasm  cycle_17_3.qasm  gf2^16_mult.qasm  gf2^256_mult.qasm  gf2^7_mult.qasm  ham15-med.qasm  hwb10.qasm  mod_adder_1048576.qasm  mod_red_21.qasm  qft_4.qasm  tof_3.qasm
experimental/apps/: build_observable.cpp
experimental/include/: circuit_dagger.hpp  node_conversion.hpp  resource_estimator.hpp  square_hubbard_circ.hpp  square_hubbard_config.hpp  to_qasm_converter.hpp
experimental/src/: FastInversion.cpp  GS.cpp  Interaction.cpp  LCU.cpp  Observable.cpp  QFT.cpp  QSVT.cpp  TrotterHam1.cpp  gate_builder.cpp  main.cpp  test_qasmify.cpp
include/ast/: ast.hpp  base.hpp  decl.hpp  expr.hpp  program.hpp  replacer.hpp  semantic.hpp  stmt.hpp  traversal.hpp  var.hpp  visitor.hpp
include/circuits/: channel_representation.hpp
include/gates/: channel.hpp
include/grid_synth/: complex.hpp  constants.hpp  diophantine_solver.hpp  exact_synthesis.hpp  gmp_functions.hpp  grid_operators.hpp  grid_solvers.hpp  grid_synth.hpp  mat_vec_2x2.hpp  matrix.hpp  random_numbers.hpp  regions.hpp  rings.hpp  rz_approximation.hpp  s3_table.hpp  states.hpp  types.hpp  utils.hpp
include/mapping/: device.hpp
include/optimization/: channel.hpp  cnot_resynthesis.hpp  rotation_folding.hpp  simplify.hpp
include/output/: cirq.hpp  ionq.hpp  lattice_surgery.hpp  projectq.hpp  qsharp.hpp  quil.hpp
include/parser/: lexer.hpp  parser.hpp  position.hpp  preprocessor.hpp  token.hpp
include/qasm/: lexer.hpp  parser.hpp  preprocessor.hpp  qasm.hpp  qelib1.inc  token.hpp  token_kinds.hpp  tokens.def
include/tools/: ast_printer.hpp  (+2 more)
libs/: CMakeLists.txt
misc/: bad.qasm  mapping_test.qasm  multi-ancilla_test.qasm  rz_test3.qasm  showcase.qasm
pystaq/: CMakeLists.txt  README.md  staq_wrapper.cpp
pystaq.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pystaq/example/: compile.py  device.json  shor_n3.qasm
pystaq/include/pystaq/: pystaq_common.hpp
pystaq/src/: pystaq.cpp  staq_wrapper.cpp
qasm/: bad.qasm  inline_test.qasm  mapping_test.qasm  multi-ancilla_test.qasm  oracle_example.qasm  oracle_example_expanded.qasm  teleport.qasm  test.qasm
qpus/: gen_ibm_singapore.sh  gen_ibm_tokyo.sh  gen_rigetti_agave.sh  ibm_singapore.json  ibm_tokyo.json  rigetti_agave.json  rigetti_aspen4.json
scripts/: gridsynth2qasm.sh  staq_grid_synth2qasm.sh
src/tools/: CMakeLists.txt  circ.cpp  desugarer.cpp  device_generator.cpp  grid_synth.cpp  group_qregs.cpp  inliner.cpp  ionq.cpp  json.cpp  lattice_surgery.cpp  mapper.cpp  oracle_synthesizer.cpp  projectq.cpp  qasm_synth.cpp  qsharp.cpp  quil.cpp  resource_estimator.cpp  rotation_optimizer.cpp  simplifier.cpp
staq/: CMakeLists.txt  main.cpp
synthewareQ/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  Makefile  angle_test.cpp  channel_test.cpp  desugar_test.cpp  gray_synth_test.cpp  inline_test.cpp  intrusive_list_test.cpp  layout_test.cpp  linear_reversible_test.cpp  logic_synthesis_test.cpp  mapping_test.cpp  optimization_test.cpp  parse_test.cpp  steiner_test.cpp
tools/: CMakeLists.txt  circ.cpp  cirq_compiler.cpp  desugarer.cpp  device_generator.cpp  grid_synth.cpp  inliner.cpp  ionq.cpp  lattice_surgery.cpp  mapper.cpp  oracle_synthesizer.cpp  projectq.cpp  projectq_compiler.cpp  qasm_synth.cpp  qsharp.cpp  qsharp_compiler.cpp  quil.cpp  quil_compiler.cpp  resource_estimator.cpp  rotation_optimizer.cpp  simplifier.cpp  synth.cpp  synthewareq.cpp  test.cpp
unit_tests/: CMakeLists.txt  main.cpp
unit_tests/gates/: channel.cpp
unit_tests/mapping/: device.cpp  layout.cpp  mapping.cpp
unit_tests/optimization/: cnot_resynthesis.cpp  rotation_folding.cpp  simplify.cpp
unit_tests/parser/: parser.cpp
unit_tests/parsing/: qasm.cpp
unit_tests/synthesis/: cnot_dihedral.cpp  linear_reversible.cpp
unit_tests/tests/gates/: channel.cpp
unit_tests/tests/grid_synth/: diophantine_solver.cpp  exact_synthesis.cpp  gmp_functions.cpp  grid_operators.cpp  grid_solvers.cpp  grid_synth.cpp  matrix.cpp  qasm_synth.cpp  regions.cpp  rings.cpp  rz_approximation.cpp  states.cpp
unit_tests/tests/mapping/: device.cpp  layout.cpp  mapping.cpp
unit_tests/tests/optimization/: cnot_resynthesis.cpp  rotation_folding.cpp  simplify.cpp
unit_tests/tests/synthesis/: cnot_dihedral.cpp  linear_reversible.cpp
unit_tests/tests/transformations/: barrier_merge.cpp  desugar.cpp  expression_simplifier.cpp  inline.cpp
unit_tests/transformations/: barrier_merge.cpp  desugar.cpp  inline.cpp
unit_tests/utils/: angle.cpp
(+351 files in other folders)
