[build-system]
requires = [
    "pybind11>=2.10.0",
    "setuptools>=42",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "pystaq"
version = "3.2.2"
description = "Python 3 wrapper for staq"
authors = [
    { name = "softwareQ Inc.", email = "info@softwareq.ca" },
]
readme = "pystaq/README.md"
license = { text = "MIT" }
dependencies = []

[project.urls]
homepage = "https://github.com/softwareqinc/staq"
repository = "https://github.com/softwareqinc/staq.git"

[tool.setuptools]
py-modules = []
