file(GLOB FILENAMES *.cpp)

add_custom_target(tools COMMENT "Build all binary tools.")

if (${WITH_GRID_SYNTH})
    if (MSVC)
        # gmp, gmpxx
        find_package(PkgConfig REQUIRED)
        pkg_check_modules(gmp REQUIRED IMPORTED_TARGET gmp)
        pkg_check_modules(gmpxx REQUIRED IMPORTED_TARGET gmpxx)
    else ()
        find_package(GMP REQUIRED)
    endif ()
endif ()

foreach (filename ${FILENAMES})
    get_filename_component(basename ${filename} NAME_WE)
    if (${WITH_GRID_SYNTH})
        if (${basename} STREQUAL "grid_synth")
            add_executable("staq_${basename}" ${filename})
            if (MSVC)
                target_link_libraries(staq_${basename} PUBLIC PkgConfig::gmp PkgConfig::gmpxx)
            else ()
                target_link_libraries(staq_${basename} PUBLIC gmp gmpxx)
            endif ()
        else ()
            add_executable("staq_${basename}" ${filename})
        endif ()
    else ()
        if (${basename} STREQUAL "grid_synth")
            continue()
        endif ()
        add_executable("staq_${basename}" ${filename})
    endif ()
    target_link_libraries(staq_${basename} PUBLIC libstaq)
    add_dependencies(tools staq_${basename})
    install(TARGETS staq_${basename} DESTINATION ${CMAKE_INSTALL_BINDIR})
endforeach ()
