file(GLOB FILENAMES *.cpp)

add_custom_target(tools COMMENT "Build all binary tools.")

include(${CMAKE_SOURCE_DIR}/cmake/grid_synth.cmake)

foreach(file ${FILENAMES})
  get_filename_component(basename ${file} NAME_WE)
  if(${BUILD_GRID_SYNTH})
    add_executable("staq_${basename}" ${file})
    if(MSVC)
      target_link_libraries(staq_${basename} PUBLIC PkgConfig::gmp
                                                    PkgConfig::gmpxx)
    else()
      target_link_libraries(staq_${basename} PUBLIC gmp gmpxx)
    endif()
  else()
    if(${basename} STREQUAL "grid_synth" OR ${basename} STREQUAL "qasm_synth")
      continue()
    endif()
    add_executable("staq_${basename}" ${file})
  endif()
  target_link_libraries(staq_${basename} PUBLIC libstaq)
  add_dependencies(tools staq_${basename})
  install(TARGETS staq_${basename} DESTINATION ${CMAKE_INSTALL_BINDIR})
endforeach()
